--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^3.0.3",
     "formidable": "^3.5.4",
     "gsap": "^3.14.2",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.563.0",
     "mongodb": "^7.1.0",
