--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start -p $PORT"
+},
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "bcryptjs": "^3.0.3",
