--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start -p $PORT"
-},
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start -p $PORT"
+  },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "bcryptjs": "^3.0.3",
@@ -17,7 +17,7 @@
     "lucide-react": "^0.563.0",
     "mongodb": "^7.1.0",
     "mongoose": "^9.1.6",
-    "next": "13.5.1",
+    "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^10.0.2",
